--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
 <h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<% @articles.each do |article| %>
+  <p><%= article.category %></p>
+  <h3><%= article.title %></h3>
+  <p><%= article.content %></p>
+<% end %>
+
+<%= link_to "nouvel article", new_article_path, class:"btn btn-primary" %>
