finalize CRUD on articles

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,8 @@
     <h3><%= article.title %></h3>
     <p><%= article.content %></p>
     <%= link_to "lire", article_path(article) %>
-    <%= link_to "modifier", edit_article(article)%>
+    <%= link_to "modifier", edit_article_path(article)%>
+    <%= link_to "supprimer", article_path(article), method: :delete, data: {confirm: "Certain de vouloir supprimer cet article?"} %>
   </div>
 <% end %>
 
