--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -4,5 +4,7 @@
   <%= f.input :title %>
   <%= f.input :category, collection: Article::CATEGORY %>
   <%= f.input :content %>
+  <%= f.input :photo, as: :file %>
+  <%#= f.input :photo, as: :file, input_html: { multiple: true } %>
   <%= f.submit %>
 <% end %>
