--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -4,6 +4,8 @@
   <%= f.input :title %>
   <%= f.input :category, collection: Article::CATEGORY %>
   <%= f.input :content %>
+  <%= f.input :photo, as: :file %>
+  <%#= f.input :photo, as: :file, input_html: { multiple: true } %>
   <%= f.submit %>
 <% end %>
 
