--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.content %></p>
-<%# @article.photos.each do |photo| %>
-  <%#= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
-<%# end %>
-<%= cl_image_tag @article.photo.key, height: 300, width: 400, crop: :fill %>
+<% @article.photos.each do |photo| %>
+  <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+<% end %>
+<%#= cl_image_tag @article.photos.first.key, height: 300, width: 400, crop: :fill %>
 <%= link_to "homePage", root_path %>
