--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,8 @@
 <h1>Pages#home</h1>
 <% @articles.each do |article| %>
   <div>
-    <%# article.photos.each.first do |photo| %>
-      <%#= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
-    <%# end %>
-    <% if article.photo.attached? %>
-      <%= cl_image_tag article.photo.key, height: 300, width: 400, crop: :fill %>
+    <% if article.photos.attached? %>
+      <%= cl_image_tag article.photos.first.key, height: 300, width: 400, crop: :fill %>
     <% end %>
     <p><%= article.category %></p>
     <h3><%= article.title %></h3>
