--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,22 @@
 <h1>Pages#home</h1>
+<% if user_signed_in? && policy(@article).create? %>
+<%= link_to "nouvel article", new_article_path, class:"btn btn-primary" %>
+<% end %>
 <% @articles.each do |article| %>
-  <div>
+  <div class="border border-primary my-3">
+    <p><%= article.category %></p>
+    <h3><%= article.title %></h3>
     <% if article.photos.attached? %>
       <%= cl_image_tag article.photos.first.key, height: 300, width: 400, crop: :fill %>
     <% end %>
-    <p><%= article.category %></p>
-    <h3><%= article.title %></h3>
     <p><%= article.content.split.first(30).join(" ") %>...</p>
     <%= link_to "lire", article_path(article) %>
-    <%= link_to "modifier", edit_article_path(article)%>
-    <%= link_to "supprimer", article_path(article), method: :delete, data: {confirm: "Certain de vouloir supprimer cet article?"} %>
+    <% if user_signed_in? && policy(article).update? %>
+      <%= link_to "modifier", edit_article_path(article)%>
+    <% end %>
+    <% if user_signed_in? && policy(article).destroy? %>
+      <%= link_to "supprimer", article_path(article), method: :delete, data: {confirm: "Certain de vouloir supprimer cet article?"} %>
+    <% end %>
   </div>
 <% end %>
 
-<%= link_to "nouvel article", new_article_path, class:"btn btn-primary" %>
