--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -14,3 +14,8 @@ $headers-font: "Nunito", "Helvetica", "sans-serif";
 //        font-url('FontFile.ttf') format('truetype')
 // }
 // $my-font: "Font Name";
+
+// @import url('https://fonts.googleapis.com/css?family=Montserrat:300,500,900&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap');
+// $body-font: 'Montserrat', sans-serif;
+// $headers-font: 'Bitter', serif;
