--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,11 @@
 <div class="navbar-bbgc d-flex justify-content-center align-items-center">
-  <p class="border">Le Club</p>
-  <p class="border">Les joueurs</p>
+  <div class="navbar-side d-flex justify-content-around">
+    <p class="">Le Club</p>
+    <p class="">Les joueurs</p>
+  </div>
   <%= image_tag  "logo_bbgc.png"%>
-  <p class="border">Contact</p>
-  <p class="border">forum</p>
+  <div class="navbar-side d-flex justify-content-around">
+    <p class="">Contact</p>
+    <p class="">forum</p>
+  </div>
 </div>
