--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,11 @@
-.navbar-lewagon {
-  justify-content: space-between;
+.navbar-bbgc {
   background: white;
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+.navbar-bbgc img {
+  width: 100px;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.navbar-side {
+  width: 300px;
 }
