--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,15 +1,27 @@
 .banner {
-  background-size: cover;
-  background-position: center;
-  padding: 112px 0;
+  padding-bottom: 50px;
+}
+.photo {
+  // background-size: cover;
+  // background-position: center;
+  background-color: #85B3D3;
+  opacity: 0.8;
+  height: 400px;
+}
+
+.title {
+  padding: 0px;
+  z-index: 100;
+  display: flex;
+  align-items: center;
 }
 
 .banner h1 {
   margin: 0;
-  color: white;
+  color: black;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 72px;
   font-weight: bold;
-  padding: 4px;
+  padding: 4px 0px;
 }
 
