--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,14 @@
-<div class="navbar-bbgc d-flex justify-content-center align-items-center">
-  <div class="navbar-side d-flex justify-content-around">
-    <p class="">Le Club</p>
-    <p class="">Les joueurs</p>
-  </div>
-  <%= image_tag  "logo_bbgc.png"%>
-  <div class="navbar-side d-flex justify-content-around">
-    <p class="">Contact</p>
-    <p class="">forum</p>
+<div class="container">
+  <div class="navbar-bbgc d-flex justify-content-between">
+    <div class="logo d-flex justify-content-left align-items-center">
+      <%= image_tag  "logo_bbgc.png"%>
+    </div>
+    <div class="links d-flex justify-content-right align-items-center">
+      <p class="px-3">Le Club</p>
+      <p class="px-3">Les joueurs</p>
+      <p class="px-3">Contact</p>
+      <p class="pl-3">forum</p>
+    </div>
   </div>
 </div>
+
