--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,15 +23,18 @@
 
         <div class="card-article">
           <p id="category"><%= article.category %></p>
-          <% if article.photos.attached? %>
-            <%= cl_image_tag article.photos.first.key, height: 300, width: 400, crop: :fill %>
-          <% else %>
-            <%= image_tag 'https://cdn.pixabay.com/photo/2019/02/25/11/39/backgammon-board-4019437__340.jpg' %>
+          <%= link_to article_path(article) do %>
+            <% if article.photos.attached? %>
+              <%= cl_image_tag article.photos.first.key, height: 300, width: 400, crop: :fill %>
+            <% else %>
+              <%= image_tag 'https://cdn.pixabay.com/photo/2019/02/25/11/39/backgammon-board-4019437__340.jpg' %>
+            <% end %>
           <% end %>
-          <h3><%= article.title %></h3>
+          <%= link_to article_path(article) do %>
+            <h3 class="card-artcile-title"><%= article.title %></h3>
+          <% end %>
           <p class="card-content"><%= article.content.split.first(30).join(" ") %>...</p>
 
-          <%#= link_to "lire", article_path(article) class:"lire" %>
           <% if user_signed_in? && policy(article).update? %>
             <%= link_to "modifier", edit_article_path(article)%>
           <% end %>
