--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,18 @@
       <p class="px-3">Le Club</p>
       <p class="px-3">Les joueurs</p>
       <p class="px-3">Contact</p>
-      <p class="pl-3">forum</p>
+      <p class="px-3">forum</p>
+      <div class="icon-session nav-item dropdown">
+        <i class="fas fa-bars dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <% if user_signed_in? %>
+        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+        <% else %>
+        <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+        <%= link_to "Signup ", new_user_registration_path, class: "nav-link" %>
+        <% end %>
+    </div>
+      </div>
     </div>
   </div>
 </div>
