--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
       <p class="px-3">Les joueurs</p>
       <p class="px-3">Contact</p>
       <p class="px-3">forum</p>
-      <div class="icon-session nav-item dropdown">
+      <div class="icon-session">
         <i class="fas fa-bars dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
         <% if user_signed_in? %>
