fix the hover of links in navbar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,12 +3,12 @@
   <div class="container">
     <div class="banner">
       <div class="row">
-        <div class="col-sm-4 title">
+        <div class="col-md-4 title">
           <div>
             <h1>Broceliande BackGammon Club</h1>
           </div>
         </div>
-        <div class="col-sm-8 photo"></div>
+        <div class="col-md-8 photo"></div>
       </div>
     </div>
   </div>
