--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -20,3 +20,20 @@
  padding-bottom: 1rem;
  margin-left: 1rem;
 }
+
+.links a {
+  color: black;
+  &:hover {
+    text-decoration: none;
+    // font-weight:bolder;
+    border-bottom: 3px solid black;
+  }
+}
+
+.icon-session a {
+  color:rgba(30,30,30,0.7);
+  &:hover {
+    text-decoration: none;
+    color:black;
+  }
+}
