--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,21 +3,21 @@
     <div class="logo d-flex justify-content-left align-items-center">
       <%= image_tag  "logo_bbgc.png"%>
     </div>
-    <div class="links d-flex justify-content-right align-items-center">
-      <p class="px-3">Le Club</p>
-      <p class="px-3">Les joueurs</p>
-      <p class="px-3">Contact</p>
-      <p class="px-3">forum</p>
+    <div class="d-flex justify-content-right align-items-center">
+      <p class="links px-3"><%= link_to "Le club" %></p>
+      <p class="links px-3"><%= link_to "Les joueurs" %></p>
+      <p class="links px-3"><%= link_to "Contact" %></p>
+      <p class="links px-3"><%= link_to "forum" %></p>
       <div class="icon-session">
         <i class="fas fa-bars dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <% if user_signed_in? %>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
-        <% else %>
-        <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-        <%= link_to "Signup ", new_user_registration_path, class: "nav-link" %>
-        <% end %>
-    </div>
+          <% if user_signed_in? %>
+            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+          <% else %>
+            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+            <%= link_to "Signup ", new_user_registration_path, class: "nav-link" %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
