--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,11 @@
             <h1>Broceliande BackGammon Club</h1>
           </div>
         </div>
-        <div class="col-md-8 photo"></div>
+        <div class="col-md-8 photo">
+          <i class="fas fa-quote-left" id="quote"></i>
+          <p id="citation">Le jeu est la forme la plus élevée de la recherche</p>
+          <p id="author">Albert Einstein</p>
+        </div>
       </div>
     </div>
   </div>
