--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,6 +1,7 @@
 .card-article {
   position: relative;
   margin-bottom: 5rem;
+  box-shadow: 0 0 15px rgba(30,30,30,0.2);
 }
 
 #category {
@@ -21,17 +22,46 @@
 .card-article h3 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
+  padding: 0.5rem 0.5rem 0.5rem 1rem;
 }
 
 .card-content {
   text-align: justify;
   font-weight: lighter;
   font-size: 14px;
+  height: 85px;
+  padding: 0 1rem 1rem 1rem;
 }
 
 .card-article a {
   color:black;
   &:hover {
     text-decoration: none;
+  }
+}
+
+#edit {
+  position: absolute;
+  background-color: white;
+  color: rgb(40,40,50);
+  padding: 6px 15px;
+  right: 70px;
+  top: -15px;
+  &:hover {
+    background-color: rgb(40,40,50);;
+    color: white;
+  }
+}
+
+#delete {
+  position: absolute;
+  background-color: white;
+  color: rgb(40,40,50);
+  padding: 6px 10px;
+  right: 15px;
+  top: -15px;
+  &:hover {
+    background-color: rgb(40,40,50);;
+    color: white;
   }
 }
