--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,6 +4,9 @@
       <%= image_tag  "logo_bbgc.png"%>
     </div>
     <div class="d-flex justify-content-right align-items-center">
+      <% if user_signed_in? && policy(@article).create? %>
+        <p><%= link_to "nouvel article", new_article_path, class:"btn-black-border" %></p>
+      <% end %>
       <p class="links px-3"><%= link_to "Le club" %></p>
       <p class="links px-3"><%= link_to "Les joueurs" %></p>
       <p class="links px-3"><%= link_to "Contact" %></p>
