--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,13 @@
-<h1><%= @article.title %></h1>
-<p><%= @article.content %></p>
-<% @article.photos.each do |photo| %>
-  <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
-<% end %>
-<%#= cl_image_tag @article.photos.first.key, height: 300, width: 400, crop: :fill %>
-<%= link_to "homePage", root_path %>
+<div class="show-article row">
+  <div class="article col-sm-12 col-md-8">
+    <h1><%= @article.title %></h1>
+
+    <%= simple_format(@article.content) %>
+    <% @article.photos.each do |photo| %>
+      <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+    <% end %>
+    <%#= cl_image_tag @article.photos.first.key, height: 300, width: 400, crop: :fill %>
+    <%= link_to "homePage", root_path %>
+  </div>
+</div>
+
