--- a/app/assets/stylesheets/components/_article.scss
+++ b/app/assets/stylesheets/components/_article.scss
@@ -1,10 +1,14 @@
 .show-article {
-  background-color: rgb(250,250,250);
+  background-color: rgb(245,245,245);
 }
 .article {
   width: 700px;
-  margin: 0 auto;
+  margin: 20px auto;
   background-color: white;
+  padding: 1rem;
+  border-radius: 2px;
+  box-shadow: 0 0 10px rgba(20,20,20,0.3);
+  text-align: justify;
 }
 
 
