--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,13 +1,38 @@
 <div class="show-article row">
   <div class="article col-sm-12 col-md-8">
     <h1><%= @article.title %></h1>
-
     <%= simple_format(@article.content) %>
-    <% @article.photos.each do |photo| %>
-      <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
-    <% end %>
+    <%# @article.photos.each do |photo| %>
+      <%#= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+    <%# end %>
     <%#= cl_image_tag @article.photos.first.key, height: 300, width: 400, crop: :fill %>
     <%= link_to "homePage", root_path %>
+    <div class="photo-article">
+  <% if @article.photos.attached? %>
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <%= cl_image_tag @article.photos.first.key %>
+          </div>
+          <div class="carousel-item">
+            <%= cl_image_tag @article.photos.last.key %>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <% else %>
+        <%= image_tag "logo_bbgc.png" %>
+      <% end %>
+    </div>
+
   </div>
 </div>
+
 
