--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -21,7 +21,7 @@
 
 .banner h1 {
   margin: 0;
-  color: rgb(40,40,50);
+  color: $bbgc;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 72px;
   font-weight: bold;
@@ -29,7 +29,7 @@
 }
 
 #quote {
-  color: rgb(40,40,50);
+  color: $bbgc;
   font-size: 72px;
   position: absolute;
   top: -50px;
