--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="navbar-bbgc d-flex justify-content-between">
     <div class="logo d-flex justify-content-left align-items-center">
-      <%= image_tag  "logo_bbgc.png"%>
+      <%= link_to root_path do %>
+        <%= image_tag  "logo_bbgc.png"%>
+      <% end %>
     </div>
     <div class="d-flex justify-content-right align-items-center">
       <% if user_signed_in? && policy(@article).create? %>
