--- a/app/assets/stylesheets/components/_article.scss
+++ b/app/assets/stylesheets/components/_article.scss
@@ -20,9 +20,6 @@
   height: 450px;
   width: 100%;
   object-fit: cover;
-  &:hover {
-    opacity: 0.7;
-  }
 }
 
 .article-content {
@@ -34,27 +31,12 @@
   margin-bottom: 0;
 }
 
-
-
-// style for carousel
-.carousel-control-next-icon:after
-{
-  content: '>';
-  font-size: 55px;
-  color: $bbgc;
+.carousel-item img {
+  height: 100%;
 }
 
-.carousel-control-prev-icon:after {
-  content: '<';
-  font-size: 55px;
+.previous-next {
   color: $bbgc;
+  font-size: 55px;
 }
 
-// .carousel-control-prev-icon,
-// .carousel-control-next-icon {
-  // height: 100px;
-  // width: 100px;
-  // outline: black;
-  // background-size: 100%, 100%;
-  // border-radius: 50%;
-// }
