--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,17 +1,17 @@
 <div class="show-article row">
   <div class="article col-sm-12 col-md-8">
     <div class="photo-first-article ">
-      <button type="button" class="btn btn-secondary btn-lg" data-toggle="modal" data-target="#exampleModal">
+      <button type="button" data-toggle="modal" data-target="#bbgcModal">
         <%= cl_image_tag @article.photos.first.key %>
       </button>
 
       <!-- Modal -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
+      <div class="modal fade" id="bbgcModal" tabindex="-1" role="dialog" aria-labelledby="bbgcModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+                <i class="fas fa-times"></i>
               </button>
             </div>
             <div class="modal-body">
@@ -28,10 +28,10 @@
                   <% end %>
                 </div>
                 <a class="carousel-control-prev" href="#preview-carousel" role="button" data-slide="prev">
-                  <span class=""><i class="fas fa-angle-left"></i></span>
+                  <span class="previous-next"><i class="fas fa-angle-left"></i></span>
                 </a>
                 <a class="carousel-control-next" href="#preview-carousel" role="button" data-slide="next">
-                  <span class=""><i class="fas fa-angle-right"></i></span>
+                  <span class="previous-next"><i class="fas fa-angle-right"></i></span>
                 </a>
               </div>
             </div>
@@ -39,6 +39,7 @@
         </div>
       </div>
     </div>
+
     <div class="article-content">
       <h1><%= @article.title %></h1>
       <%= simple_format(@article.content) %>
