--- a/app/assets/stylesheets/components/_article.scss
+++ b/app/assets/stylesheets/components/_article.scss
@@ -5,8 +5,8 @@
   width: 700px;
   margin: 20px auto;
   background-color: white;
-  padding: 2rem 1rem;
-  border-radius: 3px;
+  padding: 3rem 2rem;
+  border-radius: 24px;
   box-shadow: 0 0 10px rgba(20,20,20,0.4);
   text-align: justify;
 }
@@ -17,9 +17,14 @@
 }
 
 .photo-first-article img {
-  height: 450px;
+  height: 350px;
   width: 100%;
   object-fit: cover;
+  opacity: 0.8;
+  &:hover {
+    cursor: pointer;
+    opacity: 1;
+  }
 }
 
 .article-content {
@@ -33,6 +38,7 @@
 
 .carousel-item img {
   height: 100%;
+  opacity: 1;
 }
 
 .previous-next {
