--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -2,6 +2,7 @@
   color: rgb(40,40,50);
   padding: 4px 15px;
   border: 1px solid rgb(40,40,50);
+  border-radius: 12px;
   margin-right: 1rem;
   &:hover {
     text-decoration: none;
