--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -2,6 +2,7 @@
   position: relative;
   margin-bottom: 5rem;
   box-shadow: 0 0 15px rgba(30,30,30,0.2);
+  border: 4px solid white;
 }
 
 #category {
