--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,9 +1,9 @@
 <div class="show-article row">
   <div class="article col-sm-12 col-md-8">
     <div class="photo-first-article ">
-      <button type="button" data-toggle="modal" data-target="#bbgcModal">
+      <div data-toggle="modal" data-target="#bbgcModal">
         <%= cl_image_tag @article.photos.first.key %>
-      </button>
+      </div>
 
       <!-- Modal -->
       <div class="modal fade" id="bbgcModal" tabindex="-1" role="dialog" aria-labelledby="bbgcModalLabel" aria-hidden="true">
