add pg search gem

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -41,7 +41,7 @@
   }
 }
 
-#edit {
+#card-edit {
   position: absolute;
   background-color: white;
   color: rgb(40,40,50);
@@ -54,7 +54,7 @@
   }
 }
 
-#delete {
+#card-delete {
   position: absolute;
   background-color: white;
   color: rgb(40,40,50);
