--- a/app/assets/stylesheets/components/_article.scss
+++ b/app/assets/stylesheets/components/_article.scss
@@ -37,7 +37,9 @@
 }
 
 .carousel-item img {
-  height: 100%;
+  height: auto;
+  width: 100%;
+  object-fit: cover;
   opacity: 1;
 }
 
@@ -46,3 +48,12 @@
   font-size: 55px;
 }
 
+.tool-bar {
+  position: fixed;
+  left: 30px;
+  top: 50%;
+}
+
+.tool-bar-item {
+  padding: 10px;
+}
