--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,9 @@
 <div class="show-article row">
   <div class="article col-sm-12 col-md-8">
+    <div class="d-flex flex-column tool-bar">
+      <i class="fas fa-edit tool-bar-item"></i>
+      <i class="fas fa-trash tool-bar-item"></i>
+    </div>
     <div class="photo-first-article ">
       <div data-toggle="modal" data-target="#bbgcModal">
         <%= cl_image_tag @article.photos.first.key %>
@@ -23,7 +27,7 @@
                   </div>
                   <% @article.photos.drop(1).each do |photo| %>
                     <div class="carousel-item">
-                      <%= cl_image_tag photo.key, class: "d-block w-100"%>
+                      <%= cl_image_tag photo.key, class: "d-block"%>
                     </div>
                   <% end %>
                 </div>
