--- a/app/views/pages/club.html.erb
+++ b/app/views/pages/club.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="row align-items-center">
-    <div class="col-sm-12 col-md-6">Club fondé en 2015 par Gérard Hochet </div>
+    <div class="col-sm-12 col-md-6">Club fondé en 2015 par Gérard Hochet
+      <p>Venez nous retrouver pour jouer <span id="isabelle" data-markers="<%= @isa_markers.to_json %>">chez Isabelle </span>ou au bar <span id="avec" data-markers="<%= @avec_markers.to_json %>">"Avec"</span>
+    </div>
     <div class="col-sm-12 col-md-6" id="map"
        style="width: 100%; height: 600px;"
        data-markers="<%= @markers.to_json %>"
