destroy contact controller because error syntax

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -63,6 +63,13 @@
     <% end %>
   </div>
 
+  <%#= simple_form_for @contact do |f| %>
+  <%#= f.input :name %>
+  <%#= f.input :email %>
+  <%#= f.input :message %>
+  <%#= f.submit %>
+<%# end %>
+
 </div>
 
 
