try to fix bug on contact page

--- a/app/views/pages/club.html.erb
+++ b/app/views/pages/club.html.erb
@@ -10,5 +10,10 @@
     </div>
 
   </div>
-
+  <%= simple_form_for @contact do |f| %>
+  <%= f.input :name %>
+  <%= f.input :email %>
+  <%= f.input :message %>
+  <%= f.submit %>
+<% end %>
 </div>
