--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,10 +1,13 @@
 <h1>test</h1>
-<%= simple_form_for @contact do |f| %>
-  <%= f.input :name %>
-  <%= f.input :email %>
-  <%= f.input :message %>
-  <%= f.submit %>
-<% end %>
+
+<h5>création d'un nouvel article</h5>
+
+<%#= simple_form_for @contact do |f| %>
+  <%#= f.input :name %>
+  <%#= f.input :email %>
+  <%#= f.input :message %>
+  <%#= f.submit %>
+<%# end %>
 <!-- <div class="section" id="contact">
     <h2 class="title">Get in Touch</h2>
     <div class="contact-form">
