--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,42 +1,28 @@
-<h1>test</h1>
 
-<h5>création d'un nouvel article</h5>
 
-<%#= simple_form_for @contact do |f| %>
-  <%#= f.input :name %>
-  <%#= f.input :email %>
-  <%#= f.input :message %>
-  <%#= f.submit %>
-<%# end %>
-<!-- <div class="section" id="contact">
-    <h2 class="title">Get in Touch</h2>
+<div class="container" id="">
+    <h2 class="">Contactez-nous</h2>
     <div class="contact-form">
-      <%#= simple_form_for @contact  do |f| %>
+      <%= simple_form_for @contact  do |f| %>
         <div class="row">
           <div class="col-xs-12 col-sm-6">
             <div class="form-group">
-              <%#= f.text_field :name, placeholder: "name", class: "form-control"%>
+              <%= f.text_field :name, placeholder: "name", class: "form-control"%>
             </div>
           </div>
           <div class="col-xs-12 col-sm-6">
-            <div class="form-group <%#= @email_errors ? 'form-group-error' : '' %>">
-              <%#= f.text_field :email, placeholder: "email", class: "form-control" %>
-              <%# if @email_errors %>
-                <span class="form-error-message"><%#= @email_errors.first %></span>
-              <%# end %>
+            <div class="form-group">
+              <%= f.text_field :email, placeholder: "email", class: "form-control" %>
             </div>
           </div>
         </div>
-        <div class="form-group <%#= @message_errors ? 'form-group-error' : '' %>">
-          <%#= f.text_area :message, placeholder: "message", class: "form-control" %>
-            <%# if @message_errors %>
-              <span class="form-error-message"><%#= @message_errors.first %></span>
-            <%# end %>
+        <div class="form-group" >
+          <%= f.text_area :message, placeholder: "message", class: "form-control" %>
         </div>
-        <div class="actions">
-          <%#= f.submit "SEND", class: "ren-btn" %>
+        <div class="">
+          <%= f.submit "SEND" %>
         </div>
-      <%# end %>
+      <% end %>
     </div>
   </div>
- -->
+
