--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,8 @@
       <p class="links px-3"><%= link_to "Le club", club_path %></p>
       <p class="links px-3"><%= link_to "Les joueurs" %></p>
       <p class="links px-3"><%= link_to "Contact", contact_path %></p>
-      <p class="links px-3"><%= link_to "forum" %></p>
+      <!-- lien pour le futur forum -->
+      <!-- <p class="links px-3"><%#= link_to "forum" %></p> -->
       <div class="icon-session">
         <i class="fas fa-bars dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
