add link to joueurs page in navbar and method in pages controller

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
         <p><%= link_to "nouvel article", new_article_path, class:"btn-black-border" %></p>
       <% end %>
       <p class="links px-3"><%= link_to "Le club", club_path %></p>
-      <p class="links px-3"><%= link_to "Les joueurs" %></p>
+      <p class="links px-3"><%= link_to "Les joueurs", joueurs_path %></p>
       <p class="links px-3"><%= link_to "Contact", contact_path %></p>
       <!-- lien pour le futur forum -->
       <!-- <p class="links px-3"><%#= link_to "forum" %></p> -->
