--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -24,11 +24,13 @@
 
 .links {
   color: black;
+  transform: scaleX(0);
+  transition: transform 250ms ease-in-out;
   &:hover {
     text-decoration: none;
     color: black;
-    border-bottom: 3px solid black;
-    padding-bottom: 3px;
+    // border-bottom: 3px solid black;
+    // padding-bottom: 3px;
   }
 }
 
@@ -46,4 +48,35 @@
   padding-bottom: 3px;
 }
 
+
+.underline-from-center {
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  position: relative;
+  overflow: hidden;
+  &:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    left: 50%;
+    right: 50%;
+    bottom: 0;
+    background: black;
+    height: 4px;
+    -webkit-transition-property: left right;
+    transition-property: left right;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  &:hover:before {
+    left: 0;
+    right: 0;
+    text-decoration: none;
+  }
+}
 
