--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,19 +10,19 @@
         <p><%= link_to "nouvel article", new_article_path, class:"btn-black-border" %></p>
       <% end %>
       <% if current_page?(club_path) %>
-        <p class="px-3"><%= link_to "Le club", club_path, class:"links activelinks" %></p>
+        <p class="px-3 mx-1 activelinks"><%= link_to "Le club", club_path, class:"links" %></p>
       <% else %>
-        <p class="px-3 underline-from-center"><%= link_to "Le club", club_path, class:"links" %></p>
+        <p class="px-3 mx-1 underline-from-center"><%= link_to "Le club", club_path, class:"links" %></p>
       <% end %>
       <% if current_page?(joueurs_path) %>
-        <p class="px-3"><%= link_to "Les joueurs", joueurs_path, class:"links activelinks" %></p>
+        <p class="px-3 mx-1 activelinks"><%= link_to "Les joueurs", joueurs_path, class:"links" %></p>
       <% else %>
-        <p class="px-3"><%= link_to "Les joueurs", joueurs_path, class:"links" %></p>
+        <p class="px-3 mx-1 underline-from-center"><%= link_to "Les joueurs", joueurs_path, class:"links" %></p>
       <% end %>
       <% if current_page?(contact_path) %>
-        <p class="px-3"><%= link_to "Contact", contact_path, class:"links activelinks" %></p>
+        <p class="px-3 mx-1 activelinks"><%= link_to "Contact", contact_path, class:"links" %></p>
       <% else %>
-        <p class="px-3"><%= link_to "Contact", contact_path, class:"links" %></p>
+        <p class="px-3 mx-1 underline-from-center"><%= link_to "Contact", contact_path, class:"links" %></p>
       <% end %>
       <!-- lien pour le futur forum -->
       <!-- <p class="links px-3"><%#= link_to "forum" %></p> -->
