--- a/app/views/pages/club.html.erb
+++ b/app/views/pages/club.html.erb
@@ -2,6 +2,20 @@
   <div class="row align-items-center">
     <div class="col-sm-12 col-md-7">Club fondé en 2015 par Gérard Hochet
       <p>Venez nous retrouver pour jouer <span id="isabelle" data-markers="<%= @isa_markers.to_json %>">chez Isabelle </span>ou au bar <span id="avec" data-markers="<%= @avec_markers.to_json %>">"Avec"</span>
+        <div class="card-product fadeIn" id="card-isabelle">
+          <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+          <div class="card-product-infos">
+            <h2>Chez Isabelle</h2>
+            <p>Product description with <strong>relevant info</strong> only.</p>
+          </div>
+        </div>
+        <div class="card-product fadeIn" id="card-avec">
+          <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+          <div class="card-product-infos">
+            <h2>Avec</h2>
+            <p>Product description with <strong>relevant info</strong> only.</p>
+          </div>
+        </div>
     </div>
     <div class="col-sm-12 col-md-5" id="map"
        style="width: 100%; height: 600px;"
