display card one by one

--- a/app/views/pages/club.html.erb
+++ b/app/views/pages/club.html.erb
@@ -2,14 +2,14 @@
   <div class="row align-items-center">
     <div class="col-sm-12 col-md-7">Club fondé en 2015 par Gérard Hochet
       <p>Venez nous retrouver pour jouer <span id="isabelle" data-markers="<%= @isa_markers.to_json %>">chez Isabelle </span>ou au bar <span id="avec" data-markers="<%= @avec_markers.to_json %>">"Avec"</span>
-        <div class="card-product fadeIn" id="card-isabelle">
+        <div class="card-product zoomIn" id="card-isabelle">
           <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
           <div class="card-product-infos">
             <h2>Chez Isabelle</h2>
             <p>Product description with <strong>relevant info</strong> only.</p>
           </div>
         </div>
-        <div class="card-product fadeIn" id="card-avec">
+        <div class="card-product zoomIn" id="card-avec">
           <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
           <div class="card-product-infos">
             <h2>Avec</h2>
