--- a/app/assets/stylesheets/pages/_club.scss
+++ b/app/assets/stylesheets/pages/_club.scss
@@ -1,10 +1,37 @@
+.club-card {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.club-description {
+  text-align: justify;
+  padding-right: 50px;
+  font-weight: lighter;
+}
+
+.president {
+  border-bottom: 2px solid #E67E22;
+  padding-bottom: 5px;
+  font-weight: bolder;
+}
+
 #isabelle {
   color: #E67E22;
   cursor: pointer;
+  font-weight: bolder;
+  opacity: 0.7;
+  &:hover{
+    opacity: 1
+  }
 }
-#avec {
+#roof {
   color: #E67E22;
   cursor: pointer;
+  font-weight: bolder;
+  opacity: 0.7;
+  &:hover{
+    opacity: 1
+  }
 }
 
 #map {
@@ -16,7 +43,7 @@
   overflow: hidden;
   height: 120px;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
   display: flex;
   display: none;
   align-items: center;
