finalize style for club page

--- a/app/views/pages/club.html.erb
+++ b/app/views/pages/club.html.erb
@@ -17,14 +17,15 @@
       </ul>
       <!-- <p>Venez nous retrouver pour jouer <span id="isabelle" data-markers="<%= @isa_markers.to_json %>">chez Isabelle </span>ou au bar <span id="avec" data-markers="<%= @avec_markers.to_json %>">"Avec"</span> -->
         <div class="card-product zoomIn" id="card-isabelle">
-          <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+          <!-- <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" /> -->
+          <%= image_tag "isabelle.png" %>
           <div class="card-product-infos">
             <h2>Chez Isabelle</h2>
             <p>32 Avenue de la libération - Plélan le Grand</p>
           </div>
         </div>
         <div class="card-product zoomIn" id="card-roof">
-          <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+          <img src="https://i2.wp.com/www.rennes-infos-autrement.fr/wp-content/uploads/IMG-2761.jpg?resize=810%2C608&ssl=1" />
           <div class="card-product-infos">
             <h2>The Roof</h2>
             <p>2 rue de l'Hôtel Dieu - Rennes</p>
