--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,6 +1,7 @@
 .banner {
-  padding-top: 60px;
-  padding-bottom: 150px;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  border-bottom: 2px solid #E67E22;
 }
 .photo {
   background-image: url(https://cdn.pixabay.com/photo/2016/12/13/12/03/backgammon-1903935__340.jpg);
@@ -29,7 +30,7 @@
 }
 
 #quote {
-  color: $bbgc;
+  color: #E67E22;
   font-size: 72px;
   position: absolute;
   top: -50px;
