--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -1,12 +1,13 @@
 .btn-black-border {
-  color: rgb(40,40,50);
+  color: white;
+  background-color: rgb(40,40,50);
   padding: 4px 15px;
-  border: 1px solid rgb(40,40,50);
   border-radius: 12px;
   margin-right: 1rem;
   &:hover {
     text-decoration: none;
-    background-color: rgb(40,40,50);
-    color:white;
+    background-color: white;
+    color:rgb(40,40,50);
+    border: 1px solid #E67E22;
   }
 }
