flexbox for search form

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,6 +1,7 @@
 .card-article {
   position: relative;
-  margin-bottom: 5rem;
+  // margin-bottom: 3rem;
+  margin-top: 5rem;
   box-shadow: 0 0 15px rgba(30,30,30,0.2);
   border: 4px solid white;
 }
