--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -1,8 +1,8 @@
-.btn-black-border {
+.btn-black {
   color: white;
   background-color: rgb(40,40,50);
-  padding: 4px 15px;
-  border-radius: 12px;
+  padding: 4px 25px;
+  // border-radius: 12px;
   margin-right: 1rem;
   &:hover {
     text-decoration: none;
