--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,11 @@
 // Specific CSS for your home-page
+.search {
+  margin-top: 2rem;
+  // margin-bottom: 3rem;
+  // width:400px;
+}
+
+.search input {
+  width: 50%;
+  display: inline-block;
+}
