--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -18,8 +18,8 @@
         <div class="form-group" >
           <%= f.text_area :message, placeholder: "message", class: "form-control" %>
         </div>
-        <div class="">
-          <%= f.submit "Envoyer", class:"btn-black-border" %>
+        <div>
+          <%= f.submit "Envoyer", class:"btn-black" %>
         </div>
       <% end %>
     </div>
