--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,21 +17,22 @@
     </div>
   </div>
 
-<div class="my-6">
-  <%= form_tag root_path, method: :get do %>
-    <%= text_field_tag :query,
-      params[:query],
-      class: "form-control",
-      placeholder: "Find a article"
-    %>
-    <%= submit_tag "Search", class: "btn btn-primary" %>
-  <% end %>
 
-</div>
+  <div class="search">
+    <%= form_tag root_path, method: :get do %>
+        <div class="form-group d-flex justify-content-center">
+          <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "trouver un article" %>
+          <%= button_tag(type: "submit", class: "btn-black") do %>
+            <i class="fas fa-search"></i> Rechercher
+          <% end %>
+        </div>
+    <% end %>
+  </div>
+
 
   <div class="row">
     <% @articles.each do |article| %>
-      <div class="col-sm-12 col-md-6">
+      <div class="col-sm-12 col-md-6 col-lg-4">
 
         <div class="card-article">
           <p id="category"><%= article.category %></p>
@@ -45,7 +46,7 @@
           <%= link_to article_path(article) do %>
             <h3 class="card-artcile-title"><%= article.title %></h3>
           <% end %>
-          <p class="card-content"><%= article.content.split.first(30).join(" ") %>...</p>
+          <p class="card-content"><%= article.content.split.first(20).join(" ") %>...</p>
 
           <% if user_signed_in? && policy(article).update? %>
             <%= link_to edit_article_path(article) do %>
@@ -62,14 +63,6 @@
       </div>
     <% end %>
   </div>
-
-  <%#= simple_form_for @contact do |f| %>
-  <%#= f.input :name %>
-  <%#= f.input :email %>
-  <%#= f.input :message %>
-  <%#= f.submit %>
-<%# end %>
-
 </div>
 
 
