--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,7 +34,7 @@
     <% @articles.each do |article| %>
       <div class="col-sm-12 col-md-6 col-lg-4">
 
-        <div class="card-article">
+        <div class="card-article reveal">
           <p id="category"><%= article.category %></p>
           <%= link_to article_path(article) do %>
             <% if article.photos.attached? %>
