add hover fx on photo in show article

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,7 +30,7 @@
   </div>
 
 
-  <div class="row">
+  <div class="row articles">
     <% @articles.each do |article| %>
       <div class="col-sm-12 col-md-6 col-lg-4">
 
