--- a/app/assets/stylesheets/components/_article.scss
+++ b/app/assets/stylesheets/components/_article.scss
@@ -1,5 +1,5 @@
 .show-article {
-  // background-color: rgb(245,245,245);
+  margin-top: 50px;
 }
 .article {
   width: 700px;
@@ -13,16 +13,22 @@
 .photo-first-article {
   display: flex;
   justify-content: center;
+  border: 2px solid white;
+  &:hover {
+    border: 2px solid $orange;
+  }
 }
 
 .photo-first-article img {
   height: 350px;
   width: 100%;
   object-fit: cover;
-  opacity: 0.8;
+  // opacity: 0.8;
   &:hover {
     cursor: pointer;
-    opacity: 1;
+    // opacity: 1;
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
   }
 }
 
