simulate more players cards

--- a/app/views/pages/joueurs.html.erb
+++ b/app/views/pages/joueurs.html.erb
@@ -14,5 +14,145 @@
       </div>
     </div>
 
+
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <!-- card players -->
+      <div class="card-players">
+        <div class="d-flex justify-content-center align-items-center my-3">
+          <div class="players-illustration">
+            <h6>GH</h6>
+          </div>
+        </div>
+        <p class="name">GERARD HOCHET</p>
+        <p class="text-center">ELO: 1672</p>
+        <p class="text-center classement">class: 42ème</p>
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <!-- card players -->
+      <div class="card-players">
+        <div class="d-flex justify-content-center align-items-center my-3">
+          <div class="players-illustration">
+            <h6>GH</h6>
+          </div>
+        </div>
+        <p class="name">GERARD HOCHET</p>
+        <p class="text-center">ELO: 1672</p>
+        <p class="text-center classement">class: 42ème</p>
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <!-- card players -->
+      <div class="card-players">
+        <div class="d-flex justify-content-center align-items-center my-3">
+          <div class="players-illustration">
+            <h6>GH</h6>
+          </div>
+        </div>
+        <p class="name">GERARD HOCHET</p>
+        <p class="text-center">ELO: 1672</p>
+        <p class="text-center classement">class: 42ème</p>
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <!-- card players -->
+      <div class="card-players">
+        <div class="d-flex justify-content-center align-items-center my-3">
+          <div class="players-illustration">
+            <h6>GH</h6>
+          </div>
+        </div>
+        <p class="name">GERARD HOCHET</p>
+        <p class="text-center">ELO: 1672</p>
+        <p class="text-center classement">class: 42ème</p>
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <!-- card players -->
+      <div class="card-players">
+        <div class="d-flex justify-content-center align-items-center my-3">
+          <div class="players-illustration">
+            <h6>GH</h6>
+          </div>
+        </div>
+        <p class="name">GERARD HOCHET</p>
+        <p class="text-center">ELO: 1672</p>
+        <p class="text-center classement">class: 42ème</p>
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <!-- card players -->
+      <div class="card-players">
+        <div class="d-flex justify-content-center align-items-center my-3">
+          <div class="players-illustration">
+            <h6>GH</h6>
+          </div>
+        </div>
+        <p class="name">GERARD HOCHET</p>
+        <p class="text-center">ELO: 1672</p>
+        <p class="text-center classement">class: 42ème</p>
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <!-- card players -->
+      <div class="card-players">
+        <div class="d-flex justify-content-center align-items-center my-3">
+          <div class="players-illustration">
+            <h6>GH</h6>
+          </div>
+        </div>
+        <p class="name">GERARD HOCHET</p>
+        <p class="text-center">ELO: 1672</p>
+        <p class="text-center classement">class: 42ème</p>
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <!-- card players -->
+      <div class="card-players">
+        <div class="d-flex justify-content-center align-items-center my-3">
+          <div class="players-illustration">
+            <h6>GH</h6>
+          </div>
+        </div>
+        <p class="name">GERARD HOCHET</p>
+        <p class="text-center">ELO: 1672</p>
+        <p class="text-center classement">class: 42ème</p>
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <!-- card players -->
+      <div class="card-players">
+        <div class="d-flex justify-content-center align-items-center my-3">
+          <div class="players-illustration">
+            <h6>GH</h6>
+          </div>
+        </div>
+        <p class="name">GERARD HOCHET</p>
+        <p class="text-center">ELO: 1672</p>
+        <p class="text-center classement">class: 42ème</p>
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <!-- card players -->
+      <div class="card-players">
+        <div class="d-flex justify-content-center align-items-center my-3">
+          <div class="players-illustration">
+            <h6>GH</h6>
+          </div>
+        </div>
+        <p class="name">GERARD HOCHET</p>
+        <p class="text-center">ELO: 1672</p>
+        <p class="text-center classement">class: 42ème</p>
+      </div>
+    </div>
   </div>
 </div>
