--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -77,6 +77,7 @@
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   padding-top: 10px;
   padding-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .players-illustration {
