add linear gradient on card players

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -78,6 +78,7 @@
   padding-top: 10px;
   padding-bottom: 30px;
   margin-bottom: 20px;
+  background: linear-gradient(-250deg, #E67E22 20%, transparent 20%);
 }
 
 .players-illustration {
