--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,3 +11,16 @@
 .articles {
   margin-bottom: 50px;
 }
+
+@media (max-width: 575px) {
+  // .gallery-grid {
+  //   display: grid;
+  //   grid-template-columns: 1fr;
+  // }
+}
+
+@media (min-width: 576px) and (max-width: 768px) {
+  // .articles {
+  //   display: none;
+  // }
+}
