--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,43 +1,67 @@
-<div class="container">
-  <div class="navbar-bbgc d-flex justify-content-between">
-    <div class="logo d-flex justify-content-left align-items-center">
-      <%= link_to root_path do %>
-        <%= image_tag  "logo_bbgc.png"%>
-      <% end %>
-    </div>
-    <div class="d-flex justify-content-right align-items-center">
-      <% if user_signed_in? && policy(@article).create? %>
-        <p><%= link_to "nouvel article", new_article_path, class:"btn-black-border" %></p>
-      <% end %>
-      <% if current_page?(club_path) %>
-        <p class="px-3 mx-1 activelinks"><%= link_to "Le club", club_path, class:"links" %></p>
-      <% else %>
-        <p class="px-3 mx-1 underline-from-center"><%= link_to "Le club", club_path, class:"links" %></p>
-      <% end %>
-      <% if current_page?(joueurs_path) %>
-        <p class="px-3 mx-1 activelinks"><%= link_to "Les joueurs", joueurs_path, class:"links" %></p>
-      <% else %>
-        <p class="px-3 mx-1 underline-from-center"><%= link_to "Les joueurs", joueurs_path, class:"links" %></p>
-      <% end %>
-      <% if current_page?(contact_path) %>
-        <p class="px-3 mx-1 activelinks"><%= link_to "Contact", contact_path, class:"links" %></p>
-      <% else %>
-        <p class="px-3 mx-1 underline-from-center"><%= link_to "Contact", contact_path, class:"links" %></p>
-      <% end %>
-      <!-- lien pour le futur forum -->
-      <!-- <p class="links px-3"><%#= link_to "forum" %></p> -->
-      <div class="icon-session">
-        <i class="fas fa-bars dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <% if user_signed_in? %>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
-          <% else %>
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-            <%= link_to "Signup ", new_user_registration_path, class: "nav-link" %>
-          <% end %>
+
+  <div class="navbar-bbgc">
+    <div class="container d-flex justify-content-between">
+      <!-- first element of flex box -->
+      <div class="logo d-flex justify-content-left align-items-center">
+        <%= link_to root_path do %>
+          <%= image_tag  "logo_bbgc.png"%>
+        <% end %>
+      </div>
+      <!-- second element of flexbox -->
+      <div class="d-flex justify-content-right align-items-center">
+        <!-- links -->
+        <% if user_signed_in? && policy(@article).create? %>
+          <p><%= link_to "nouvel article", new_article_path, class:"btn-black" %></p>
+        <% end %>
+        <% if current_page?(club_path) %>
+          <p class="px-3 mx-1 activelinks"><%= link_to "Le club", club_path, class:"links" %></p>
+        <% else %>
+          <p class="px-3 mx-1 underline-from-center"><%= link_to "Le club", club_path, class:"links" %></p>
+        <% end %>
+        <% if current_page?(joueurs_path) %>
+          <p class="px-3 mx-1 activelinks"><%= link_to "Les joueurs", joueurs_path, class:"links" %></p>
+        <% else %>
+          <p class="px-3 mx-1 underline-from-center"><%= link_to "Les joueurs", joueurs_path, class:"links" %></p>
+        <% end %>
+        <% if current_page?(contact_path) %>
+          <p class="px-3 mx-1 activelinks"><%= link_to "Contact", contact_path, class:"links" %></p>
+        <% else %>
+          <p class="px-3 mx-1 underline-from-center"><%= link_to "Contact", contact_path, class:"links" %></p>
+        <% end %>
+         <!-- end des links -->
+
+        <div class="icon-session">
+          <i class="fas fa-bars dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <% if user_signed_in? %>
+              <div class="add-links">
+                <% if user_signed_in? && policy(@article).create? %>
+                  <%= link_to "nouvel article", new_article_path, class:"nav-link" %>
+                  <div class="dropdown-divider"></div>
+                <% end %>
+                <%= link_to "Le club", club_path, class:"nav-link" %>
+                <%= link_to "Les joueurs", joueurs_path, class:"nav-link" %>
+                <%= link_to "Contact", contact_path, class:"nav-link" %>
+                <div class="dropdown-divider"></div>
+              </div>
+              <%= link_to "Log out", destroy_user_session_path, method: :delete, class:"nav-link" %>
+            <% else %>
+              <div class="add-links">
+                <%= link_to "Le club", club_path, class:"nav-link" %>
+                <%= link_to "Les joueurs", joueurs_path, class:"nav-link" %>
+                <%= link_to "Contact", contact_path, class:"nav-link" %>
+                <div class="dropdown-divider"></div>
+              </div>
+              <%= link_to "Login", new_user_session_path, class:"nav-link" %>
+              <%= link_to "Signup ", new_user_registration_path, class:"nav-link" %>
+            <% end %>
+          </div>
         </div>
       </div>
+
     </div>
+
   </div>
-</div>
+
+
 
