--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
       <div class="d-flex justify-content-right align-items-center">
         <!-- links -->
         <% if user_signed_in? && policy(@article).create? %>
-          <p><%= link_to "nouvel article", new_article_path, class:"btn-black" %></p>
+          <p><%= link_to "nouvel article", new_article_path, class:"btn-black new-article" %></p>
         <% end %>
         <% if current_page?(club_path) %>
           <p class="px-3 mx-1 activelinks"><%= link_to "Le club", club_path, class:"links" %></p>
@@ -34,11 +34,13 @@
           <i class="fas fa-bars dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <% if user_signed_in? %>
-              <div class="add-links">
-                <% if user_signed_in? && policy(@article).create? %>
+              <% if user_signed_in? && policy(@article).create? %>
+                <div class="hidden-new-article">
                   <%= link_to "nouvel article", new_article_path, class:"nav-link" %>
                   <div class="dropdown-divider"></div>
-                <% end %>
+                </div>
+              <% end %>
+              <div class="hidden-links">
                 <%= link_to "Le club", club_path, class:"nav-link" %>
                 <%= link_to "Les joueurs", joueurs_path, class:"nav-link" %>
                 <%= link_to "Contact", contact_path, class:"nav-link" %>
@@ -46,7 +48,7 @@
               </div>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class:"nav-link" %>
             <% else %>
-              <div class="add-links">
+              <div class="hidden-links">
                 <%= link_to "Le club", club_path, class:"nav-link" %>
                 <%= link_to "Les joueurs", joueurs_path, class:"nav-link" %>
                 <%= link_to "Contact", contact_path, class:"nav-link" %>
